--- a/pages/chart/chartRoom/chartRoom.wxss
+++ b/pages/chart/chartRoom/chartRoom.wxss
@@ -89,7 +89,6 @@ page {
   width: 100rpx;
   height: 100rpx;
   border-radius: 50%;
-  background-color: red;
 }
 
 .sj {
@@ -132,6 +131,7 @@ page {
   height: 100rpx;
   display: flex;
   align-items: center;justify-content: center;
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .icon-weixin1,.icon-dianhua,.icon-yaoqing{
@@ -165,6 +165,7 @@ page {
   justify-content: space-around;
   width: 100%;
   height: 275rpx;
+  background-color: rgba(255, 255, 255, 1);
 }
 .more_item_all{
     width: 160rpx;
@@ -196,4 +197,11 @@ page {
 }
 .record{
   padding-bottom: 20rpx;
+}
+.pd{
+  padding-bottom: 375rpx;
+}
+.main_wrapImg{
+  width: 220rpx;
+  height: auto;
 }
