--- a/pages/chart/chartRoom/chartRoom.wxml
+++ b/pages/chart/chartRoom/chartRoom.wxml
@@ -38,14 +38,17 @@
               {{myitem.word}}
             </view>
             <view class='main_wrap' wx:else="{{myitem.media!=null}}">
-              {{myitem.media}}
+              <view class='myaudio' bindtap='playaudio'>
+                <image src='../../../img/huatong@2x.png' class='mai'></image>
+                <image src='../../../img/jai@2x.png' class='shengyin'></image>
+              </view>
             </view>
           </view>
         </view>
         <view class='chart_list_right' wx:else>
 
           <view class='list_main_right'>
-             <view class='main_wrap_right' wx:if="{{myitem.image!=null}}">
+            <view class='main_wrap_right' wx:if="{{myitem.image!=null}}">
               <image class='main_wrapImg' src="{{myitem.image}}" mode='widthFix'>
 
               </image>
@@ -54,7 +57,10 @@
               {{myitem.word}}
             </view>
             <view class='main_wrap_right' wx:else="{{myitem.media!=null}}">
-              {{myitem.media}}
+              <view class='myaudio' bindtap='play' data-src='{{myitem.media}}'>
+                <image src='../../../img/huatong@2x.png' class='mai'></image>
+                <image src='../../../img/jai@2x.png' class='shengyin'></image>
+              </view>
             </view>
             <view class='sj_right'>
 
@@ -84,7 +90,7 @@
         </view>
         <view class='more_item_alltitle'>拍摄</view>
       </view>
-      <view class='more_item'>
+      <view class='more_item' bindtap='addaudio'>
         <view class='more_item_all'>
           <text class='iconfont icon-huatong'></text>
         </view>
@@ -94,3 +100,9 @@
   </view>
 </view>
 <myDialog id='myDialog' isShow="{{isShow}}" config="{{config}}" bind:mycel="DialogCel" bind:mysend="DialogSend"></myDialog>
+<import src="../../../template/template.wxml" />
+
+<view class='audio_group' wx:if="{{audioshow}}">
+  <template is="audio_group" data="{{...audio}}" wx:if="{{showaudio}}"></template>
+  <template is="up_audio_group" data="{{...audio}}" wx:if="{{!showaudio}}"></template>
+</view>
