--- a/pages/business_Card/business_Card.wxml
+++ b/pages/business_Card/business_Card.wxml
@@ -1,7 +1,7 @@
 <view class="mywrap">
   <view class='head'>
     <image class='head_logo' src='{{alldata.avatar}}'></image>
-    <view class='head_title'>{{avatar.user_nickname}}</view>
+    <view class='head_title'>{{alldata.user_nickname}}</view>
     <view class='head_mintitle'>在实现自我价值中寻求一种满足感</view>
   </view>
 </view>
@@ -18,15 +18,15 @@
   </view>
   <view class='zl_item'>
     <text class='iconfont icon-wode'></text>
-    <text class='item_res'>{{alldata.sex}} {{alldata.constellation}} {{alldata.birthday}}</text>
+    <text class='item_res'>{{alldata.sex==null?'未填写':alldata.sex}} {{alldata.constellation==null?'未填写':alldata.constellation}} {{alldata.birthday==null?'未填写':alldata.birthday}}</text>
   </view>
   <view class='zl_item'>
     <text class='iconfont icon-weizhi'></text>
-    <text class='item_res'>{{alldata.live}}</text>
+    <text class='item_res'>{{alldata.live==null?'未填写':alldata.live}}</text>
   </view>
   <view class='zl_item'>
     <text class='iconfont icon-zhiye'></text>
-    <text class='item_res'>大学教师</text>
+    <text class='item_res'>{{alldata.profession==null?'未填写':alldata.profession}}</text>
   </view>
 </view>
 
