--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -12,11 +12,11 @@ page {
 }
 
 .draw_box {
-  width: 132rpx;
-  height: 131rpx;
+  width:427rpx;
+   height:242rpx; 
   margin: 269rpx auto 0;
   border-radius: 20rpx;
-  background: linear-gradient(to bottom, #8200fd, #cb00fc);
+  /* background: linear-gradient(to bottom, #8200fd, #cb00fc); */
   display: block;
 }
 
