享遇最新提交

--- a/pages/index/pl/pl.wxml
+++ b/pages/index/pl/pl.wxml
@@ -1,12 +1,12 @@
 <view class='wrap'>
-  <textarea class="text" placeholder='写下您的评论'>
+  <textarea class="text" placeholder='写下您的评论' bindinput='textIpt' value='{{textIpt}}'>
       
   </textarea>
   <view class='adder'>
       当前位置：<text class='iconfont icon-dizhi'></text> <text class='adder_res'>天津 · 建国楼</text>
   </view>
 
-  <view class='logn'>
+  <view class='logn' bindtap='togo'>
     发表
   </view>
 </view>
