--- a/pages/index/wantBill/wantBill.wxml
+++ b/pages/index/wantBill/wantBill.wxml
@@ -1,44 +1,45 @@
 <view class='wrap'>
   <view class='head_Group'>
     <view class='head'>
-      <image class='head_log'></image>
+      <image class='head_log' src='{{alldata.user.avatar}}'></image>
       <view class='head_res'>
-        <view class='name'>仇益阳
+        <view class='name'>{{alldata.user.user_nickname}}
           <text class='iconfont icon-nv'></text> </view>
-        <view class='distance'>距离2.2km</view>
+        <view class='distance'>距离{{alldata.content.distance>1000?alldata.content.distance/1000:alldata.content.distance}}km</view>
       </view>
       <view class='head_type'>
-        <view class='head_type_title'>18346597684</view>
+        <view class='head_type_title'>{{alldata.user.mobile}}</view>
       </view>
     </view>
     <view class='head_main'>
-      如果你无法简洁的表达你的想法，那只说明 你还不够了解它。
+      {{alldata.content.word}}
     </view>
-    <view class='head_operation'>
+    <!-- <view class='head_operation'>
       <text class='iconfont icon-xihuan'></text> 88
       <text class='iconfont icon-fenxiang'></text> 分享
-    </view>
+    </view> -->
   </view>
 
 
   <view class='adder_Group'>
-    <view class='adder_item'>
+    <!-- <view class='adder_item'>
       <view class='adder_title'>起点</view>
       <view class='adder_res'>天津市和平区</view>
-    </view>
+    </view> -->
     <view class='adder_item' style='margin-top:20rpx'>
       <view class='adder_title'>终点</view>
-      <view class='adder_res'>天津市和平区</view>
+      <view class='adder_res'>{{alldata.content.address}}</view>
     </view>
   </view>
 
+<picker mode='time' bindchange='change' start='06:00' end='21:00'>
   <view class='sendTime'>
     <view class='sendtitle'>预计送达时间</view>
-    <view class='sendtime'>13:00</view>
-    <!-- <text class='iconfont icon-xiangxia'></text> -->
+    <view class='sendtime'>{{time}}</view>
+    <text class='iconfont icon-xiangxia'></text>
   </view>
-
-  <view class='logn'>
-    确认接单
+</picker>
+  <view class='logn' bindtap='tologn'>
+    {{sureTitle}}
   </view>
 </view>
